# Openlist_Sorter

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md
.github/workflows/: release.yml
cmake/: openlist_sorter_deploy_runtime_deps.cmake
src/api/: openlist_client.cpp  openlist_client.h
src/app/: main.cpp
src/core/: connection_profile.cpp  connection_profile.h  models.h  runtime_paths.cpp  runtime_paths.h
src/preview/: ffmpeg_image_decoder.cpp  ffmpeg_image_decoder.h  heif_image_decoder.cpp  heif_image_decoder.h  image_converter.cpp  image_converter.h  image_decoder.cpp  image_decoder.h  jpeg_image_encoder.cpp  jpeg_image_encoder.h  magick_wand_bridge.cpp  magick_wand_bridge.h  preview_cache.cpp  preview_cache.h  webp_image_encoder.cpp  webp_image_encoder.h  wic_image_decoder.cpp  wic_image_decoder.h
src/ui/: connection_dialog.cpp  connection_dialog.h  connection_info_dialog.cpp  connection_info_dialog.h  main_window.cpp  main_window.h  remote_directory_dialog.cpp  remote_directory_dialog.h  zoomable_image_label.cpp  zoomable_image_label.h
tools/: verify_windows_runtime.ps1
